# ethereal

./: .gitignore  .markdownlintignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  biome.json  commitlint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/skills/desktop-e2e-testing/: SKILL.md
.claude/skills/frontend-code-review/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/frontend-testing/: SKILL.md
.claude/skills/tauri-backend-testing/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.husky/: pre-commit
docs/: api.md  contributing.md  deployment.md  development.md  roadmap.md  skill-analysis.md  technical.md  usage.md
e2e/: visual.spec.ts
scripts/: fmt-rs-staged.ts  generate-assets.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  config_test.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs  test.rs
src-tauri/src/monitors/: battery.rs  clipboard.rs  cpu.rs  factory.rs  learning.rs  mock.rs  mock_test.rs  mod.rs  network.rs  state.rs  state_test.rs  window.rs
src-tauri/src/utils/: autostart.rs  display.rs  display_test.rs  hotkeys.rs  logger.rs  mod.rs  notification.rs  startup.rs  tray.rs  window.rs
src/__tests__/: App.test.tsx  SpriteAnimator.test.tsx  logger.test.ts  setup.ts  useWindowPosition.test.tsx
src/__tests__/integration/: AnimationPreview.test.tsx  CharacterInteraction.test.tsx  ChatFlow.test.tsx  ClickThroughShortcut.test.tsx  DragDrop.test.tsx  HardwareDashboard.test.tsx  HotkeySettings.test.tsx  SettingsFlow.test.tsx  SettingsForm.test.tsx  SettingsMonitor.test.tsx  SettingsSound.test.tsx  SoundEffects.test.tsx  StateOverlay.test.tsx  SystemMonitor.test.tsx  TrayMenu.test.tsx  WindowBehavior.test.tsx
src/__tests__/unit/: AnimationPreview.test.tsx  HotkeyRecorder.test.tsx  ResourceStore.test.ts  SettingsStore.test.ts  SoundStore.test.ts  SoundStoreAdvanced.test.ts  SpriteStore.test.ts
src/components/: AnimationPreview.tsx  DevTools.tsx  ErrorBoundary.tsx  SettingsModal.tsx  SpeechBubble.tsx  SpriteAnimator.tsx  StateOverlay.tsx  WelcomeModal.tsx
src/components/SettingsModal/: AITab.tsx  HardwareTab.tsx  HotkeyRecorder.tsx  HotkeysTab.tsx  NotificationsTab.tsx  PrivacyTab.tsx  SettingsModal.tsx  SleepTab.tsx  SoundTab.tsx  SpriteTab.tsx  WindowTab.tsx  index.ts  (+1 more)
src/hooks/: useDraggable.ts  useSoundEffects.ts  useWindowPosition.ts
src/lib/: logger.ts  utils.ts
src/stores/: chatStore.ts  monitorStore.ts  resourceStore.ts  settingsStore.ts  soundStore.ts  spriteStore.ts
src/types/: config.ts
(+18 files in other folders)
