[package]
name = "ethereal_lib"
version = "0.1.0"
description = "以太之灵 - 智能桌面精灵助手"
authors = ["Mystvio"]
license = "MIT"
repository = "https://github.com/pplmx/ethereal"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# ============ Tauri 核心 ============
tauri = { version = "2.0", features = [ "tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"

# ============ 异步运行时 ============
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "fs",
] }
futures = "0.3"

# ============ HTTP 客户端 ============
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

# ============ 序列化/反序列化 ============
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# ============ 配置管理 ============
config = { version = "0.14", features = ["toml"], default-features = false }

# ============ 错误处理 ============
anyhow = "1.0"
thiserror = "1.0"

# ============ 日志系统 ============
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2"

# ============ 硬件监控 ============
# NVIDIA GPU 监控
nvml-wrapper = { version = "0.10", optional = true }
# 系统信息 (CPU, 内存等)
sysinfo = "0.32"

# ============ 活跃窗口检测 ============
active-win-pos-rs = "0.8"

# ============ 剪贴板 ============
arboard = { version = "3.4", features = ["wayland-data-control"] }

# ============ 文件监听 ============
notify = "6.1"
notify-debouncer-mini = "0.4"

# ============ 工具库 ============
once_cell = "1.20"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tauri-plugin-opener = "2"
raw-window-handle = "0.6.2"

# ============ Windows 特定 ============
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Performance",
] }

# ============ macOS 特定 ============
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# ============ Linux 特定 ============
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

# ============ 特性开关 ============
[features]
default = ["nvidia-support"]

# NVIDIA GPU 支持 (可选)
nvidia-support = ["nvml-wrapper"]

# 开发模式特性
dev = []

# ============ 优化配置 ============
[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# 更快的编译速度 (开发时使用)
[profile.dev.package."*"]
opt-level = 2
